feat: implement interactive learning pathway tree and exam result analysis systems